# bubbles

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PHASE_A.md  README.md  app.openbubbles.Gtk.Devel.desktop  app.openbubbles.Gtk.Devel.yml  bug.md  build.rs  de_frb.sh  flake.nix  gst-plugin-gtk4-sources.json  io.github.chrispouliot.Bubbles.desktop  io.github.chrispouliot.Bubbles.metainfo.xml  io.github.chrispouliot.Bubbles.yml  plan.md  progress  progress units 1+2  progress.md  setup-rustpush.sh
.flatpak-builder/cache/refs/heads/x86_64-app.openbubbles.Gtk.Devel.yml/: build-openbubbles-gtk  init
.flatpak-builder/checksums/: x86_64-app.openbubbles.Gtk.Devel.yml
.pi/subagents/5ce9431e/run-0/: session.jsonl
crates/open-absinthe/: Cargo.toml  NOTES.md  README.md
crates/open-absinthe/src/: hooks.rs  jelly.rs  lib.rs  nac.rs
flatpak/: README.md  build.sh
src/: attachment_cache.rs  demo.rs  gtk_bridge.rs  image.rs  main.rs  power.rs  retry.rs  runtime.rs  sync.rs  text_scale.rs  time_format.rs  tray.rs  video.rs  window_state.rs
src/api/: buffered_conn.rs  mod.rs  runtime.rs
src/protocol/: mod.rs  rustpush_backend.rs  stub.rs
src/setup/: flow.rs  mod.rs  view.rs
src/store/: mod.rs  model.rs
src/ui/: avatar.rs  mod.rs
tests/fixtures/: sample.heic
tools/: install-dev-desktop.sh
