[package]
name = "openbubbles-gtk"
version = "0.1.0"
edition = "2021"
# NOTE: once the rustpush dependency is added, the whole crate must be SSPL-1.0
# (see README). Until then this is just a placeholder.
license = "SSPL-1.0"
description = "Native GTK4/libadwaita client for OpenBubbles (iMessage)"

[dependencies]
adw = { version = "0.9", package = "libadwaita" }
gtk = { version = "0.11", package = "gtk4" }
glib = "0.22"
gio = "0.22"
tokio = { version = "1", features = ["full"] }
