[package]
name = "openbubbles-gtk"
version = "0.1.0"
edition = "2021"
# Once the rustpush feature is enabled, the whole crate is a covered work under
# rustpush's SSPL-1.0 (see PHASE_A.md). Drop the SSPL LICENSE at that point.
license = "SSPL-1.0"
description = "Native GTK4/libadwaita client for OpenBubbles (iMessage)"
build = "build.rs"

[features]
# rustpush is on by default now: plain `cargo build`/`cargo run` uses the real
# backend (the vendored third_party/rustpush tree with pre-seeded FairPlay
# certs + protoc on PATH). Use `--no-default-features` for the StubBackend
# path (fast offline iteration, the verify harness, no protoc).
default = ["rustpush"]
rustpush = [
    "dep:rustpush", "dep:keystore", "dep:prost", "dep:plist", "dep:rand",
    "dep:uuid", "dep:sha2", "dep:base64", "dep:serde", "dep:async-recursion",
    "dep:flexi_logger", "dep:multi_log", "dep:pretty_env_logger",
]

[dependencies]
# UI + async core (always on)
adw = { version = "0.9", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.11", package = "gtk4", features = ["v4_12"] }
glib = "0.22"
gio = "0.22"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-channel = "2"
anyhow = "1"

# message store (Phase B). bundled sqlite => no system dep, clean on NixOS and
# in a future Flatpak. Always on: the store has no rustpush dependency.
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"

# rustpush backend (only under --features rustpush). Vendored path deps under
# third_party/rustpush (pinned to a7fab47) with FairPlay certs pre-seeded into
# certs/fairplay/, so no clone or cert-seeding step is needed at build time.
rustpush = { path = "third_party/rustpush", features = ["macos-validation-data", "remote-anisette-v3"], optional = true }
keystore = { path = "third_party/rustpush/keystore", optional = true }

# transitive deps the vendored api subset uses
prost = { version = "0.12", optional = true }
plist = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive", "rc"], optional = true }
async-recursion = { version = "1", optional = true }
flexi_logger = { version = "0.28", optional = true }
multi_log = { version = "0.1", optional = true }
pretty_env_logger = { version = "0.5", optional = true }

libheif-rs = "1"

# Tray
rustls = { version = "0.23", features = ["ring"] }
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"] }
log = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
# build.rs only compiles the proto when CARGO_FEATURE_RUSTPUSH is set, so this
# is harmless for the default build.
prost-build = "0.12"
